k8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: desafiomq-service
spec:
  selector:
    app: desafiomq
  ports:
    - protocol: TCP
      port: 8080        # Porta do serviço
      targetPort: 8080  # Porta do container
  type: LoadBalancer
